--- a/Qualifications.html
+++ b/Qualifications.html
@@ -33,7 +33,7 @@
     >
       <a
         class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white"
-        href="Index.html" 
+        href="index.html" 
         >Home</a
       >
       <a
