--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                     <label
                       class="block uppercase text-xs font-bold mb-2"
                       >Phone Number</label>
-                      <p>07415969609</p>
+                      <p>Available on request</p>
                   </div>
                 </div>
               </div>
