--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <p class="mt-4 text-lg text-gray-300">
                   Currently looking for a graduate/junior job. 
                 </p>
-                <a href="./assets/JoshuaMorganCV.docx" target="_blank" class="bg-transparent hover:bg-blue-500 text-white font-semibold hover:text-white p-4 border border-blue-500 hover:border-transparent rounded inline-block mt-5 cursor-pointer"
+                <a href="./assets/Joshua_MorganCV.docx" target="_blank" class="bg-transparent hover:bg-blue-500 text-white font-semibold hover:text-white p-4 border border-blue-500 hover:border-transparent rounded inline-block mt-5 cursor-pointer"
                 >Download CV</a
                 >
               </div>
