WIP PluralSight Links

--- a/projects.html
+++ b/projects.html
@@ -118,9 +118,67 @@
                           >
                             <i class="fas fa-project-diagram fa-2x"></i>
                           </div>
-                          <h class="text-xl font-semibold">Projects</h>
+                          <h class="text-xl font-semibold">PluralSight</h>
+                          <a href="https://app.pluralsight.com/achievements/share/4cb4d7dd-7021-463e-b671-5e2f7cb78a86" target="_blank">
+                            <p class="mt-2 mb-4 text-gray-600">
+                              <img
+                              alt="..."
+                              class="w-10 h-10 rounded-lg inline-flex"
+                              src="./assets/img/plurallogo.jpg"
+                              />
+                              Defensive Coding in C#
+                            </p>
+                          </a>
+                            
+                          <p href="https://app.pluralsight.com/achievements/share/809e219e-96b8-4539-8ce6-dd34d9a9f781" class="mt-2 mb-4 text-gray-600">
+                            <img
+                            alt="..."
+                            class="w-10 h-10 rounded-lg inline-flex"
+                            src="./assets/img/plurallogo.jpg"
+                            />
+                            C# 10: The Big Picture
+                          </p>
+                          <p href="https://app.pluralsight.com/achievements/share/6e49ea1f-e18c-4df1-8aaa-c2f7d8ac5820" class="mt-2 mb-4 text-gray-600">
+                            <img
+                            alt="..."
+                            class="w-10 h-10 rounded-lg inline-flex"
+                            src="./assets/img/plurallogo.jpg"
+                            />
+                            Object-Oriented Programming Fundamentals in C#
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="pt-6 w-full md:w-4/12 px-4 text-center mt-4">
+                      <div
+                        class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
+                      >
+                        <div class="px-4 py-5 flex-auto">
+                          <div
+                            class="font-semibold inline-block py-3 mr-3 text-Black"
+                          >
+                            <i class="fas fa-project-diagram fa-2x"></i>
+                          </div>
+                          <h class="text-xl font-semibold">LinkedInAwards</h>
                           <p class="mt-2 mb-4 text-gray-600">
-                            HOW THIS PAGE WORKS DESCRIPTION
+                            Awards
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="pt-6 w-full md:w-4/12 px-4 text-center mt-4">
+                      <div
+                        class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
+                      >
+                        <div class="px-4 py-5 flex-auto">
+                          <div
+                            class="font-semibold inline-block py-3 mr-3 text-Black"
+                          >
+                            <i class="fas fa-project-diagram fa-2x"></i>
+                          </div>
+                          <h class="text-xl font-semibold">Other</h>
+                          <p class="mt-2 mb-4 text-gray-600">
+                            Other certs :
                           </p>
                         </div>
                       </div>
@@ -130,7 +188,7 @@
               </section>
       </div>
 
-      <!-- About Section -->
+      <!-- Section -->
       <section id="Project1" class="relative py-20 bg-white text-Black">
         <div class="container mx-auto px-4">
           <div class="items-center flex flex-wrap">
