--- a/index.html
+++ b/index.html
@@ -122,11 +122,8 @@
             <div class="w-full lg:w-8/12 px-4 ml-auto mr-auto text-center">
               <div>
                 <h1 class="text-white font-semibold text-5xl">
-                  Joshua Morgan | <span class='text-blue-500'>Developer</span> 
+                  Joshua Morgan | <span class='text-blue-500'>C# .NET Developer</span> 
                 </h1>
-                <p class="mt-4 text-lg text-gray-300">
-                  Currently looking for a graduate/junior job. 
-                </p>
                 <a href="./assets/Joshua_MorganCV.docx" target="_blank" class="bg-transparent hover:bg-blue-500 text-white font-semibold hover:text-white p-4 border border-blue-500 hover:border-transparent rounded inline-block mt-5 cursor-pointer"
                 >Download CV</a
                 >
@@ -170,9 +167,12 @@
                 <small class='text-Black text-lg'>About Me</small>
                 <h3 class="text-3xl font-semibold">I am Joshua Morgan</h3>
                 <p class="mt-4 text-lg leading-relaxed">
-                  I am a Welsh Computer Science graduate who achieved a 2:1 as my final grade.
-                  I am quite a social person, I enjoy going for drinks and a chat on the weekend. 
-                  I have always considered myself someone who is open to learning and I enjoy putting my 100% into things i'm interested in. 
+                  I am a Welsh Software Developer working at a Secure Printing company that uses Blockchain Technology in order to verify Authenticity.
+                  Computer Science graduate who achieved a 2:1 and was a course leader during my final year.
+                </p>
+                <p class="mt-4 text-lg leading-relaxed">
+                  I am quite a social person who enjoys going for drinks and a chat on the weekend and
+                  have always considered myself someone who is open to learning and I enjoy putting my 100% into things i'm interested in. 
                 </p>
                 <ul class="list-none mt-6">
                   <li class="py-2">
@@ -226,7 +226,6 @@
       <section class="pb-20 bg-black">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap">
-
             <div class="pt-24 w-full md:w-4/12 px-4 text-center mt-4">
               <div
                 class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
@@ -308,15 +307,15 @@
               <div class="px-6">
                 <img
                   alt="..."
-                  src="./assets/img/Untitled-8.png"
+                  src="./assets/img/sqlserver.png"
                   class="shadow-lg rounded max-w-full mx-auto"
                   style="max-width: 250px;"
                 />
                 <div class="pt-6 text-center">
-                  <h5 class="text-xl font-bold">HTML, CSS and JavaScript</h5>
+                  <h5 class="text-xl font-bold">SQL and SQL Server</h5>
                   <p class="mt-1 text-sm text-black font-semibold">
-                    I am experienced in using HTML and CSS through use in multiple small landing page projects. 
-                    I have moderate experience with JavaScript and I am currently learing different systems such as Node.js and React/Vue. 
+                     I use SQL in order to store and query the data at my current workplace. I have an understanding of queries and joins in order to fulfill current 
+                     requirements and needs. I am undergoing deeper training in this area in order to strengthen my knowledge.
                   </p>
                 </div>
               </div>
@@ -326,16 +325,15 @@
               <div class="px-6">
                 <img
                   alt="..."
-                  src="./assets/img/python-logo (1).png"
+                  src="./assets/img/CHashtagNet.png"
                   class="shadow-lg rounded max-w-full mx-auto"
                   style="max-width: 250px;"
                 />
                 <div class="pt-6 text-center">
-                  <h5 class="text-xl font-bold">Python</h5>
+                  <h5 class="text-xl font-bold">C# .NET</h5>
                   <p class="mt-1 text-sm text-black font-semibold">
-                    Currently undertaking the complete Python bootcamp by Jose Portilla. 
-                    This course is teaching the advanced features of Python and giving me a deeper and more complete understanding from the ground up.
-                    I will also be undertaking Python and Django for web developement by Jose Portilla when I complete the initial bootcamp. 
+                    Currently working as a C# Developer for over a year. Working on multiple projects and navigating a large codebase.
+                    Here I worked on large amounts of Unit Tests, Implemented APIs, Used MVC and Helped implement the ABP Framework. 
                   </p>
                 </div>
               </div>
@@ -353,14 +351,30 @@
                   <h5 class="text-xl font-bold">C++</h5>
                   <p class="mt-1 text-sm text-black font-semibold">
                     Over my 3 years at university this was the primary language I used for software development. 
-                    I used this language in order to make small projects such as a hangman game, to bigger courseworks such as a vending machine that uses states and security with maintenance modes.
-                    I also used this languge when learning networking where I impletented a version of Djikstras algorithm.  
+                    I used this language in order to make small projects such as a hangman game, to bigger coursework such as a vending machine that uses states and security with maintenance modes.
+                    I also used this language when learning networking where I implemented a version of Dijkstra's algorithm.  
                   </p>
                 </div>
               </div>
             </div>
-
-
+            <!-- Card 4 -->
+            <div class="w-full md:w-4/12 lg:mb-0 mb-12 px-4 mt-4" data-aos="flip-right">
+              <div class="px-6">
+                <img
+                  alt="..."
+                  src="./assets/img/Untitled-8.png"
+                  class="shadow-lg rounded max-w-full mx-auto"
+                  style="max-width: 250px;"
+                />
+                <div class="pt-6 text-center">
+                  <h5 class="text-xl font-bold">HTML, CSS and JavaScript</h5>
+                  <p class="mt-1 text-sm text-black font-semibold">
+                    I am experienced in using HTML and CSS through use in multiple projects and currently use CSHTML in my workplace. 
+                    I have moderate experience with JavaScript and I am undergoing training using tools such as Pluralsight in order to deepen my knowledge.  
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -436,7 +450,7 @@
         >
           <div class="w-full md:w-4/12 px-4 mx-auto text-center">
             <div class="text-sm text-gray-600 font-semibold py-1">
-              Copyright © 2020 Joshua Morgan
+              Copyright © 2020-2022 Joshua Morgan
 
             </div>
           </div>
