--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
                   >
                     <i class="fas fa-address-card fa-2x"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Course Representetive</h6>
+                  <h6 class="text-xl font-semibold">Course Representative</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Course representetive for final year students. 
+                    Course Representative for final year students. 
                     I put forward potential solutions and pushed for software plugins such as OpenDyslexic for those students that could be struggling with their projects. <br>
                     My role became important due to the complications caused by the Coronavirus pandemic. 
-                    I ensured that tools and resources were made available when the university closed for lockdown.
+                    I ensured that tools and resources were made available when the university closed for lock down.
                   </p>
                 </div>
               </div>
