Added new project to list

--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
             <section class="pt-20 bg-white">
                 <div class="container mx-auto px-4">
                   <div class="flex flex-wrap">
-                    <div class="pt-6 w-full md:w-4/12 px-4 text-center mt-4">
+                    <div class="pt-6 w-full md:w-4/12 px-4 mt-4">
                       <div
                         class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
                       >
@@ -149,7 +149,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="pt-6 w-full md:w-4/12 px-4 text-center mt-4">
+                    <div class="pt-6 w-full md:w-4/12 px-4 mt-4">
                       <div
                         class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
                       >
@@ -166,7 +166,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="pt-6 w-full md:w-4/12 px-4 text-center mt-4">
+                    <div class="pt-6 w-full md:w-4/12 px-4 mt-4">
                       <div
                         class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
                       >
@@ -268,25 +268,19 @@
               <img
                 alt="..."
                 class="max-w-full rounded-lg shadow-lg"
-                src="./assets/img/underconstruction.JPG"
+                src="./assets/img/BlogProject.JPG"
               />
             </div>
             <div class="w-full md:w-5/12 ml-auto mr-auto px-4"data-aos="fade-left">
               <div class="md:pr-12">
-                <h3 class="text-3xl font-semibold">Coming Soon</h3>
+                <h3 class="text-3xl font-semibold">ABP Blog Project</h3>
                 <p class="mt-4 text-lg leading-relaxed">
-                    Currently being worked on 
+                    In order to improve my knowledge of C# and the ABP Framework, I undertook a project that would allow me to implement some of 
+                    ABP's out of the box authentication and authorization tools as well as learn to implement Domain Driven Design. 
                 </p>
                 <div class="inline-flex">
                     <a
-                href="#" target="_blank"
-              >
-                    <button class="mt-2 bg-gray-300 hover:bg-gray-400 text-black font-bold py-2 px-4 rounded-2 mr-2">
-                      Live
-                    </button>
-                    </a>
-                    <a
-                href="#" target="_blank"
+                href="https://github.com/Jmorgan108/Blog-Project" target="_blank"
               >
                     <button class="mt-2 bg-gray-300 hover:bg-gray-400 text-black font-bold py-2 px-4 rounded-2 ">
                       Github
