--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <section class="pb-20 bg-black">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap">
-            <div class="pt-24 w-full md:w-4/12 px-4 text-center mt-4">
+            <div class="pt-6 w-full md:w-4/12 px-4 mt-4">
               <div
                 class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
               >
@@ -234,18 +234,40 @@
                   <div
                     class="font-semibold inline-block py-3 mr-3 text-Black"
                   >
-                    <i class="fas fa-award fa-2x"></i>
+                    <i class="fas fa-project-diagram fa-2x"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">PASS Leader</h6>
-                  <p class="mt-2 mb-4 text-gray-600">
-                    In final year of university I worked as a Peer Assisted Support Session tutor, where I would help first year students in an extra session during the week, 
-                    with anything they needed assistance on such as if they were struggling with learning the fundamentals of C++.
+                  <h class="text-xl font-semibold">PluralSight</h>
+                  <a href="https://app.pluralsight.com/achievements/share/4cb4d7dd-7021-463e-b671-5e2f7cb78a86" target="_blank">
+                    <p class="mt-2 mb-4 text-gray-600">
+                      <img
+                      alt="..."
+                      class="w-10 h-10 rounded-lg inline-flex"
+                      src="./assets/img/plurallogo.jpg"
+                      />
+                      Defensive Coding in C#
+                    </p>
+                  </a>
+                    
+                  <p href="https://app.pluralsight.com/achievements/share/809e219e-96b8-4539-8ce6-dd34d9a9f781" class="mt-2 mb-4 text-gray-600">
+                    <img
+                    alt="..."
+                    class="w-10 h-10 rounded-lg inline-flex"
+                    src="./assets/img/plurallogo.jpg"
+                    />
+                    C# 10: The Big Picture
+                  </p>
+                  <p href="https://app.pluralsight.com/achievements/share/6e49ea1f-e18c-4df1-8aaa-c2f7d8ac5820" class="mt-2 mb-4 text-gray-600">
+                    <img
+                    alt="..."
+                    class="w-10 h-10 rounded-lg inline-flex"
+                    src="./assets/img/plurallogo.jpg"
+                    />
+                    Object-Oriented Programming Fundamentals in C#
                   </p>
                 </div>
               </div>
             </div>
-
-            <div class="pt-6 w-full md:w-4/12 px-4 text-center mt-4">
+            <div class="pt-6 w-full md:w-4/12 px-4 mt-4">
               <div
                 class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
               >
@@ -253,20 +275,16 @@
                   <div
                     class="font-semibold inline-block py-3 mr-3 text-Black"
                   >
-                    <i class="fas fa-address-card fa-2x"></i>
+                    <i class="fas fa-project-diagram fa-2x"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Course Representative</h6>
+                  <h class="text-xl font-semibold">LinkedInAwards</h>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Course Representative for final year students. 
-                    I put forward potential solutions and pushed for software plugins such as OpenDyslexic for those students that could be struggling with their projects. <br>
-                    My role became important due to the complications caused by the Coronavirus pandemic. 
-                    I ensured that tools and resources were made available when the university closed for lock down.
+                    Awards
                   </p>
                 </div>
               </div>
             </div>
-            
-            <div class="pt-16 w-full md:w-4/12 px-4 text-center mt-4">
+            <div class="pt-6 w-full md:w-4/12 px-4 mt-4">
               <div
                 class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg" data-aos="fade-up"
               >
@@ -274,13 +292,11 @@
                   <div
                     class="font-semibold inline-block py-3 mr-3 text-Black"
                   >
-                    <i class="fas fa-server fa-2x"></i>
+                    <i class="fas fa-project-diagram fa-2x"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">ICT Technician</h6>
+                  <h class="text-xl font-semibold">Other</h>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Whilst working for as an ICT Technician, I would provide general IT support and administration, 
-                    such as setting up and configuring desktop computers for new offices and companies. 
-                    I also learnt how to run and install category 5/6 cabling through office buildings into their corresponding servers
+                    Other certs :
                   </p>
                 </div>
               </div>
