--- a/Qualifications.html
+++ b/Qualifications.html
@@ -203,6 +203,93 @@
                           8 GCSEs (Including English and Mathematics)  <br>
                     </p>
                   </div>
+                  <div class="w-full lg:w-9/12 px-4">
+                    <h1 class="font-semibold mb-1 text-lg leading-relaxed text-gray-800 pt-6">Experience</h1>
+                    <p class="mb-2 text-lg leading-relaxed text-gray-800">
+                      <i>
+                      <p class="text-lg font-bold">                        
+                        Technical Support Analyst, Alcumus <br>
+                      </p>
+                    </i>
+                      <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        <i>
+                        12/2020 - 07/2021 <br>
+                        </i>
+                            </p>
+                          <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                        <p class="leading-relaxed">
+                        Provided Tier 1 technical support to 700 employees based in 4 Locations in the UK and Canada via Phone and E-mail. 
+                        My role at Alcumus required me to document systems and solutions that had not been found before for complex issues using Confluence and Manage Engine. 
+                        Initiated and helped implement a tracking system for any monitors we had to send out to remote users. 
+                        From here initiated steps to change the way the new starter process was conducted and managed. These changes helped increase the teams speed and management of new users.    <br>
+                      </p>
+                      <p class="mb-2 text-lg leading-relaxed text-gray-800">
+                        <i>
+                        <p class="text-lg font-bold">                        
+                          Course Representative for Final Year Students, University of South Wales <br>
+                        </p>
+                      </i>
+                        <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                          <i>
+                            09/2019 – 06/2020 <br>
+                          </i>
+                              </p>
+                            <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                          <p class="leading-relaxed">
+                            Liaised with students throughout the year to resolve any issues that were raised about the course or the lack of resources. 
+                            Put forward potential solutions and pushed for software plugins such as OpenDyslexic for those students that could be struggling with their projects. 
+                            This will also aid future students who choose to study the course. 
+                            My role became particularly important in helping my peers manage the complications caused by the Coronavirus pandemic. 
+                            Ensured that tools and resources were made available when the university closed for lockdown.    <br>
+                        </p>
+                            </p>  
+                            <p class="mb-2 text-lg leading-relaxed text-gray-800">
+                              <i>
+                              <p class="text-lg font-bold">                        
+                                ICT Technician, JPS Technical Services LTD <br>
+                              </p>
+                            </i>
+                              <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                                <i>
+                                12/2020 - 07/2021 <br>
+                                </i>
+                                    </p>
+                                  <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                                <p class="leading-relaxed">
+                                  Worked with JPS Technical Services as required by the company. Volunteered to help if an extra team member was necessary to complete a large assignment. 
+                                  Whilst working for JPS, provided general IT support and administration, such as setting up and configuring desktop computers for new offices and companies. 
+                                  Most jobs required running and installing category 5/6 cabling through office buildings into their corresponding servers.      <br>
+                              </p>
+                                  </p>
+                                  <p class="mb-2 text-lg leading-relaxed text-gray-800">
+                                    <i>
+                                    <p class="text-lg font-bold">
+                                      Additional Contributions <br>
+                                    </p>
+                                  </i>
+                                        <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                                      <p class="leading-relaxed">
+                                        <p class="mb-2 text-lg leading-relaxed text-gray-800">
+                                          <i>
+                                          <p class="text-lg font-bold">                        
+                                            ICT Technician, JPS Technical Services LTD <br>
+                                          </p>
+                                        </i>
+                                          <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                                            <i>
+                                            12/2020 - 07/2021 <br>
+                                            </i>
+                                                </p>
+                                              <p class="font-semibold mb-1 text-lg leading-relaxed text-gray-800">
+                                            <p class="leading-relaxed">
+                                              Worked with JPS Technical Services as required by the company. Volunteered to help if an extra team member was necessary to complete a large assignment. 
+                                              Whilst working for JPS, provided general IT support and administration, such as setting up and configuring desktop computers for new offices and companies. 
+                                              Most jobs required running and installing category 5/6 cabling through office buildings into their corresponding servers.      <br>
+                                          </p>
+                                              </p>      <br>
+                                    </p>
+                                        </p>
+                  </div>
                 </div>
               </div>
             </div>
