--- a/projects.html
+++ b/projects.html
@@ -118,8 +118,8 @@
                           >
                             <i class="fas fa-project-diagram fa-2x"></i>
                           </div>
-                          <h class="text-xl font-semibold">PluralSight</h>
-                          <p>TEST TEST</p>
+                          <h class="text-xl font-semibold">Projects</h>
+                          <p>This list includes some of the projects I have made in order to demonstrate my current skill level and knowledge.</p>
                         </div>
                       </div>
                     </div>         
